Gerando doc de login
